--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,24 +6,40 @@
 </head>
 <body class="text-center">
 <div layout:fragment="content">
-    <form class="form-signing" th:action="@{/login}" method="post">
-        <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" />
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <div th:if="${param.error}">
-            Invalid email and password.
-        </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
-        </div>
-        <label for="inputUsername" class="sr-only">Email address</label>
-        <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required="" />
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required="" />
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    </form>
-    <form class="form-signin" th:action="@{/signup}" method="get">
-        <button class="btn btn-md btn-success btn-block" type="Submit">Signup Here</button>
-    </form>
+
+    <main class="form-signin">
+        <form th:action="@{/login}" method="post">
+            <img class="mb-4" src="images/logo.png" alt="" width="72" height="72">
+            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+            <div th:if="${param.error}">
+                Invalid username and password.
+            </div>
+            <div th:if="${param.logout}">
+                You have been logged out.
+            </div>
+
+            <div class="form-floating">
+                <input type="text" name="username" class="form-control" id="floatingInput" placeholder="Username">
+                <label for="floatingInput">Username</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
+            </div>
+
+            <div class="checkbox mb-3">
+                <label>
+                    <a th:href="@{/signup}" method="get">Dont have an account yet ?</a>
+                </label>
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+        </form>
+    </main>
+
+
+
 </div>
 </body>
 </html>
